crates/oxc_semantic/tests/integration/snapshots/argument_map.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/argument_map.js
snapshot_kind: text
---
bb0: {

}

bb1: {

}

bb2: {

}

bb3: {
	statement
	return
}

bb4: {

}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1" shape = box]
    2 [ label = "bb2" shape = box]
    3 [ label = "bb3
ExpressionStatement
return" shape = box]
    4 [ label = "bb4" shape = box]
    1 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    3 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    1 -> 3 [ label="NewFunction"]
    4 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    1 -> 4 [ label="Normal"]
}
