crates/oxc_semantic/tests/integration/snapshots/arrow_expressions.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/arrow_expressions.js
---
bb0: {

}

bb1: {
	statement
	statement
}

bb2: {

}

bb3: {
	return
}

bb4: {

}

bb5: {
	return
}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1
ExpressionStatement
VariableDeclaration" shape = box]
    2 [ label = "bb2" shape = box]
    3 [ label = "bb3
return" shape = box]
    4 [ label = "bb4" shape = box]
    5 [ label = "bb5
return" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 3 [ label="NewFunction"]
    5 -> 4 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 5 [ label="NewFunction"]
}
