crates/oxc_semantic/tests/integration/snapshots/assignment_operators.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/assignment_operators.js
---
bb0: {
	(BasicBlockFlags(Implicit | Error))
}

bb1: {
	(BasicBlockFlags(Start | Referenced | Shared))
	statement
}

bb2: {
	(BasicBlockFlags(Assignment | Referenced))
}

bb3: {
	(BasicBlockFlags(Referenced | Shared))
	statement
}

bb4: {
	(BasicBlockFlags(Assignment | Referenced))
}

bb5: {
	(BasicBlockFlags(Referenced | Shared))
	statement
}

bb6: {
	(BasicBlockFlags(Assignment | Referenced))
}

bb7: {
	(BasicBlockFlags(0x0))
	statement
	statement
}

digraph {
    0 [ label = "bb0
(BasicBlockFlags(Implicit | Error))" shape = box]
    1 [ label = "bb1
(BasicBlockFlags(Start | Referenced | Shared))
ExpressionStatement" shape = box]
    2 [ label = "bb2
(BasicBlockFlags(Assignment | Referenced))" shape = box]
    3 [ label = "bb3
(BasicBlockFlags(Referenced | Shared))
ExpressionStatement" shape = box]
    4 [ label = "bb4
(BasicBlockFlags(Assignment | Referenced))" shape = box]
    5 [ label = "bb5
(BasicBlockFlags(Referenced | Shared))
ExpressionStatement" shape = box]
    6 [ label = "bb6
(BasicBlockFlags(Assignment | Referenced))" shape = box]
    7 [ label = "bb7
(BasicBlockFlags(0x0))
ExpressionStatement
ExpressionStatement" shape = box]
    1 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    2 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    3 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    1 -> 2 [ label="Normal"]
    1 -> 3 [ label="Normal"]
    2 -> 3 [ label="Normal"]
    4 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    5 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    3 -> 4 [ label="Normal"]
    3 -> 5 [ label="Normal"]
    4 -> 5 [ label="Normal"]
    6 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    7 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    5 -> 6 [ label="Normal"]
    5 -> 7 [ label="Normal"]
    6 -> 7 [ label="Normal"]
}
