crates/oxc_semantic/tests/integration/snapshots/break_from_a_label_in_global_scope.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/break_from_a_label_in_global_scope.js
---
bb0: {
	(BasicBlockFlags(Implicit | Error))
}

bb1: {
	(BasicBlockFlags(Start | Referenced | Shared))
	statement
	break <label>
}

bb2: {
	(BasicBlockFlags(Unreachable | Referenced))
	unreachable
}

bb3: {
	(BasicBlockFlags(0x0))
}

digraph {
    0 [ label = "bb0
(BasicBlockFlags(Implicit | Error))" shape = box]
    1 [ label = "bb1
(BasicBlockFlags(Start | Referenced | Shared))
LabeledStatement(A)
break <A>" shape = box]
    2 [ label = "bb2
(BasicBlockFlags(Unreachable | Referenced))
unreachable" shape = box]
    3 [ label = "bb3
(BasicBlockFlags(0x0))" shape = box]
    1 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    2 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    1 -> 2 [ label="Unreachable", style="dotted"]
    3 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    2 -> 3 [ label="Normal", style="dotted"]
    1 -> 3 [ label="Jump", color=green]
}
