crates/oxc_semantic/tests/integration/snapshots/cond_expr_in_arrow_fn.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/cond_expr_in_arrow_fn.js
---
bb0: {

}

bb1: {
	statement
}

bb2: {

}

bb3: {

}

bb4: {
	condition
}

bb5: {

}

bb6: {

}

bb7: {
	return
}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1
VariableDeclaration" shape = box]
    2 [ label = "bb2" shape = box]
    3 [ label = "bb3" shape = box]
    4 [ label = "bb4
Condition(CallExpression(a))" shape = box]
    5 [ label = "bb5" shape = box]
    6 [ label = "bb6" shape = box]
    7 [ label = "bb7
return" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 3 [ label="NewFunction"]
    4 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    5 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    6 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    7 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 4 [ label="Normal"]
    5 -> 7 [ label="Normal"]
    4 -> 5 [ label="Jump", color=green]
    4 -> 6 [ label="Normal"]
    6 -> 7 [ label="Normal"]
}
