crates/oxc_semantic/tests/integration/snapshots/conditional_expression.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/conditional_expression.js
---
bb0: {
	(BasicBlockFlags(Implicit | Error))
}

bb1: {
	(BasicBlockFlags(Start | Referenced))
	statement
}

bb2: {
	(BasicBlockFlags(TrueCondition | FalseCondition | Referenced | Shared))
	condition
}

bb3: {
	(BasicBlockFlags(Referenced))
}

bb4: {
	(BasicBlockFlags(Referenced))
}

bb5: {
	(BasicBlockFlags(0x0))
	statement
}

digraph {
    0 [ label = "bb0
(BasicBlockFlags(Implicit | Error))" shape = box]
    1 [ label = "bb1
(BasicBlockFlags(Start | Referenced))
VariableDeclaration" shape = box]
    2 [ label = "bb2
(BasicBlockFlags(TrueCondition | FalseCondition | Referenced | Shared))
Condition(CallExpression(a))" shape = box]
    3 [ label = "bb3
(BasicBlockFlags(Referenced))" shape = box]
    4 [ label = "bb4
(BasicBlockFlags(Referenced))" shape = box]
    5 [ label = "bb5
(BasicBlockFlags(0x0))
VariableDeclaration" shape = box]
    1 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    2 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    3 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    4 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    5 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    1 -> 2 [ label="Normal"]
    3 -> 5 [ label="Normal"]
    2 -> 3 [ label="Jump", color=green]
    2 -> 4 [ label="Normal"]
    4 -> 5 [ label="Normal"]
}
